--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ networks:
 
 services:
   influxdb:
-    image: influxdb:2.0-alpine
+    image: influxdb:1.8
     networks:
       - k6
       - grafana
